# Game-Engine-3

./: CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
src/: CMakeLists.txt  assets.json  config.json  level.json  main.cpp
src/Config/: Config.cpp  Config.h  LevelConfig.cpp  LevelConfig.h
src/Ecs/: CMakeLists.txt
src/Ecs/Components/: BaseComponentStorage.h  ComponentStorage.hpp
src/Ecs/Entity/: EntityId.cpp  EntityId.h
src/Ecs/Filter/: Filter.cpp  Filter.h  FilterBuilder.cpp  FilterBuilder.h
src/Ecs/Systems/: IInitializer.h  ISystem.h  SystemsManager.cpp  SystemsManager.h
src/Ecs/World/: IWorldInternal.h  World.cpp  World.h
src/GUI/: GUI.cpp  GUI.h
src/GameEngine/: GameEngine.cpp  GameEngine.h  GameEngineConfiguration.h  Scene.cpp  Scene.h
src/GameEngine/Assets/: Animation.cpp  Animation.h  AssetManager.cpp  AssetManager.h  AssetNames.h
src/GameEngine/Input/: InputAction.h  InputManager.cpp  InputManager.h
src/Sample/: BestTimeStorage.cpp  BestTimeStorage.h
src/Sample/Components/: AnimationStateComponent.h  AnimatorComponent.h  BoxColliderComponent.h  BrickTileComponent.h  BulletComponent.h  CameraComponent.h  CircleColliderComponent.h  CollisionComponent.h  DamageEventComponent.h  DecorComponent.h  DefaultCameraComponent.h  DestroyOnAnimationEndComponent.h  FinishComponent.h  FinishReachedEvent.h  FollowXCameraComponent.h  GoombaComponent.h  GravityComponent.h  HealthComponent.h  MoveInputEvent.h  MovementComponent.h  PathfindingComponent.h  PatrolComponent.h  PlayerComponent.h  PositionComponent.h  QuestionTileComponent.h  RespawnComponent.h  ShooterComponent.h  SpriteComponent.h  TileComponent.h
src/Sample/Scenes/: EditorScene.cpp  EditorScene.h  GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h
src/Sample/Systems/: AnimationStateSystem.cpp  AnimationStateSystem.h  AnimationSystem.cpp  AnimationSystem.h  CollisionDetectionSystem.cpp  CollisionDetectionSystem.h  CollisionHandlerSystem.cpp  CollisionHandlerSystem.h  DefaultCameraSystem.cpp  DefaultCameraSystem.h  DestroyOnAnimationEndSystem.cpp  DestroyOnAnimationEndSystem.h  EnemyAISystem.cpp  EnemyAISystem.h  FollowCameraSystem.cpp  FollowCameraSystem.h  GravitySystem.cpp  GravitySystem.h  HealthSystem.cpp  HealthSystem.h  InitSystem.cpp  InitSystem.h  InputSystem.cpp  InputSystem.h  MovementSystem.cpp  MovementSystem.h  PathfindingSystem.cpp  PathfindingSystem.h  PatrolSystem.cpp  PatrolSystem.h  RenderSystem.cpp  RenderSystem.h  RespawnSystem.cpp  RespawnSystem.h  ShootSystem.cpp  ShootSystem.h
